kubernetes/base/php-fpm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: blog
        image: ghcr.io/algchoo/blog:104455d
        securityContext:
          runAsUser: 0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: storage-volume
          mountPath: /var/www/storage/app
        - name: cache-volume
          mountPath: /var/www/storage/framework/cache/data
        - name: sessions-volume
          mountPath: /var/www/storage/framework/sessions
        - name: views-volume
          mountPath: /var/www/storage/framework/views
      volumes:
      - name: storage-volume
        persistentVolumeClaim:
          claimName: nfs-pvc
      - name: cache-volume
        emptyDir: {}
      - name: sessions-volume
        emptyDir: {}
      - name: views-volume
        emptyDir: {}
