kubernetes/base/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:17
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: pgdata-volume
          mountPath: /var/lib/postgresql/data/
      volumes:
      - name: pgdata-volume
        emptyDir: {}
      - name: storage-volume
        persistentVolumeClaim:
          claimName: nfs-pvc
      - name: cache-volume
        emptyDir: {}
      - name: sessions-volume
        emptyDir: {}
      - name: views-volume
        emptyDir: {}
