kubernetes/base/upload-md.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-md
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upload-md
  template:
    metadata:
      labels:
        app: upload-md
    spec:
      containers:
      - name: upload-md
        image: ghcr.io/algchoo/upload:37e7231
        ports:
        - containerPort: 8080
