kubernetes/base/php-fpm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-fpm-service
  namespace: default
spec:
  selector:
    app: blog
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
