kubernetes/base/upload-md-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upload-md-service
spec:
  selector:
    app: upload-md
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
